--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,15 +16,15 @@
     <nav class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/}">COORS</a>
+                <a class="navbar-brand" th:href="@{/}">CIS</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a th:href="@{/}">Clientes</a></li>
-                    <li class="active"><a th:href="@{/}">Produtos</a></li>
-                    <li class="active"><a th:href="@{/}">Orçamento</a></li>
-                    <li class="active"><a th:href="@{/}">Relatótio</a></li>
-                    <li class="active"><a th:href="@{/}">Configurações</a></li>
+                    <li class="active"><a th:href="@{/clientes}">Clientes</a></li>
+                    <li class="active"><a th:href="@{/produtos}">Produtos</a></li>
+                    <li class="active"><a th:href="@{/fluxo}">Fluxo</a></li>
+                    <li class="active"><a th:href="@{/nota}">Consultar Nota</a></li>
+                    <li class="active"><a th:href="@{/usuarios}">Usuários</a></li>
                 </ul>
             </div>
         </div>
