--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -10,12 +10,11 @@
 	<div th:replace="fragments/header :: header"/>
 	
 	<div class="container">
-		<div class="row">
-			<div class="col-sm-12" style="text-align: center;">
-				<h1> Sistema de Controle Interno Simplificado </h1>
-			</div>
-		</div>
+	
+	    Controle de Usuários
+	
 	</div>
+	<!-- /.container -->
 	
 	<div th:replace="fragments/footer :: footer"/>
 
