--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -1,22 +1,50 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>erp-coors</title>
+<title>erp-coors</title>
 
-    <div th:replace="fragments/header :: header-css"/>
-
+<div th:replace="fragments/header :: header-css" />
 </head>
+
 <body>
-	<div th:replace="fragments/header :: header"/>
-	
+	<div th:replace="fragments/header :: header" />
+
 	<div class="container">
-	
-	    Clientes
-	
+		<div class="row" style="padding-bottom: 25px;">
+			<div class="col-sm-6">
+				<form>
+					Filtro: <input name="filter" type="text" size="40"></input>
+					<input type="submit" class="btn btn-success" value="Filtrar"></input>
+				</form>
+			</div>
+			<div class="col-sm-5">&nbsp;</div>
+			<div class="col-sm-1">
+				<form action="cliente/novo">
+					<input type="submit" class="btn btn-primary" value="Novo"> </input>
+				</form>
+			</div>
+		</div>
+		<div class="row">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>nome</th>
+						<th>telefone</th>
+						<th>endereco</th>
+						<th>Detalhes</th>
+						<th>Excluir</th>
+					</tr>
+				</thead>
+
+				<tbody>
+
+				</tbody>
+			</table>
+		</div>
 	</div>
-	<!-- /.container -->
-	
-	<div th:replace="fragments/footer :: footer"/>
+
+	<div th:replace="fragments/footer :: footer" />
 
 </body>
 </html>
