--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
 <head>
     <div th:fragment="header-css">
         <!-- this is header-css -->
+    	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
 		rel="stylesheet"/>
 		<link th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}"
