--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a th:href="@{/clientes}">Clientes</a></li>
+                    <li class="active"><a th:href="@{/clientes/listar}">Clientes</a></li>
                     <li class="active"><a th:href="@{/produtos}">Produtos</a></li>
                     <li class="active"><a th:href="@{/fluxo}">Fluxo</a></li>
                     <li class="active"><a th:href="@{/nota}">Consultar Nota</a></li>
