--- a/src/main/resources/templates/clientes_ficha.html
+++ b/src/main/resources/templates/clientes_ficha.html
@@ -48,25 +48,42 @@
 				</div>
 
 				<div class="form-group row">
-					<label for="phone1" class="col-sm-1 col-form-label">Telefone
-						1</label>
-					<div class="col-sm-11">
-						<input type="text" class="form-control" id="phone1"
-							th:field="*{phones}" placeholder="Phone"> </input>
-					</div>
-				</div>
-
-				<div class="form-group row">
 					<label for="address" class="col-sm-1 col-form-label">Endereço</label>
 					<div class="col-sm-11">
 						<input type="text" class="form-control" id="address"
 							th:field="*{address}" placeholder="Endereço"> </input>
 					</div>
 				</div>
-
+				
+				<div class="form-group row">
+					<label for="phone1" class="col-sm-1 col-form-label">Telefone(s) </label>
+					<div class="col-sm-1">
+						<input th:type="submit" class="btn btn-success" name="addContactPhone"
+                           value="Novo Telefone"> </input>
+					</div>
+				</div>
+				
+				<div class="form-group row" th:each="phone, rowStat : *{phones}">
+					<label for="phone1" class="col-sm-1 col-form-label">Telefone 
+						</label>
+					 <div class="col-sm-10">
+						<input type="text" class="form-control"
+							th:field="*{phones[__${rowStat.index}__].phone}" placeholder="Telefone"> </input>
+						<input type="hidden" class="form-control" th:field="*{phones[__${rowStat.index}__].id}" 
+						    th:value="*{phones[__${rowStat.index}__].id}"> </input> 
+					</div>
+					<div class="col-sm-1 row-delete-button">
+                           <button type="submit" class="btn btn-default"
+                                   th:value="*{phones[__${rowStat.index}__].id}"
+                                   name="rmContactPhone">
+                               <i class="glyphicon glyphicon-trash icon-white"></i>
+                           </button>
+                        </div>
+				</div>
+				
 				<div class="form-group row">
 					<div class="col-sm-10">
-						<button type="submit" class="btn btn-primary">Gravar</button>
+						<button type="submit" name="newClient" class="btn btn-primary">Gravar</button>
 					</div>
 				</div>
 
