Add Product model, repository, view  and controller

--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -29,9 +29,9 @@
 				<thead>
 					<tr>
 						<th style="text-align:center; width:50px;">ID</th>
-						<th>nome</th>
-						<th>telefone</th>
-						<th>endereco</th>
+						<th>Nome</th>
+						<th>Telefone</th>
+						<th>Endereco</th>
 						<th style="text-align:center; width:100px;">Editar</th>
 						<th style="text-align:center; width:100px;">Excluir</th>
 					</tr>
