--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a th:href="@{/clientes/listar}">Clientes</a></li>
-                    <li class="active"><a th:href="@{/produtos}">Produtos</a></li>
+                    <li class="active"><a th:href="@{/produtos/listar}">Produtos</a></li>
                     <li class="active"><a th:href="@{/fluxo}">Fluxo</a></li>
                     <li class="active"><a th:href="@{/nota}">Consultar Nota</a></li>
                     <li class="active"><a th:href="@{/usuarios}">Usuários</a></li>
