--- a/src/main/resources/templates/orcamentos_ficha.html
+++ b/src/main/resources/templates/orcamentos_ficha.html
@@ -11,10 +11,10 @@
 
 	<div class="container">
 		<div class="row" style="text-align: center; padding-bottom: 40px;">
-			<h1>Ficha de produto</h1>
+			<h1>Orçamento</h1>
 		</div>
 		<div class="row">
-			<form th:action="@{/produtos/novo}" th:object="${product}"
+			<form th:action="@{/orcamentos/novo}" th:object="${order}"
 				method="POST">
 
 				<div class="form-group row">
@@ -32,43 +32,103 @@
 				</div>
 
 				<div class="form-group row">
-					<label for="name" class="col-sm-1 col-form-label">Código</label>
+					<label for="name" class="col-sm-1 col-form-label">Cliente</label>
 					<div class="col-sm-11">
-						<input type="text" class="form-control" id="cod"
-							th:field="*{cod}" placeholder="Código"> </input>
+						<input type="text" class="form-control" id="cli_name"
+							th:field="*{client.name}" placeholder="Cliente"> </input>
+						<input type="hidden" class="form-control" id="cli_id"
+							th:field="*{client.id}"> </input>
 					</div>
 				</div>
 
 				<div class="form-group row">
-					<label for="cpf_cnpj" class="col-sm-1 col-form-label">Descrição</label>
-					<div class="col-sm-11">
-						<input type="text" class="form-control" id="description"
-							th:field="*{description}" placeholder="Descrição"> </input>
+					<label for="name" class="col-sm-1 col-form-label">Num. Prod.:</label>
+					<div class="col-sm-2">
+						<input type="text" class="form-control" id="cli_id" readOnly="readonly"
+							> </input>
 					</div>
-				</div>
-
-				<div class="form-group row">
-					<label for="address" class="col-sm-1 col-form-label">Unidade</label>
-					<div class="col-sm-11">
-						<select th:field="*{unit}">
-							<option value="kg">Kg</option>
-						    <option value="lt">Litro</option>
-						    <option value="cx">Caixa</option>
-						</select>
+					
+					<label for="name" class="col-sm-1 col-form-label">Valor:</label>
+					<div class="col-sm-2">
+						<input type="text" class="form-control" id="cli_id" readOnly="readonly"
+							th:field="*{fullValue}"> </input>
+					</div>
+					
+					<label for="name" class="col-sm-1 col-form-label">Desconto:</label>
+					<div class="col-sm-2">
+						<input type="text" class="form-control" id="cli_id"
+							th:field="*{discount}"> </input>
+					</div>
+					
+					<label for="name" class="col-sm-1 col-form-label">Valor Final:</label>
+					<div class="col-sm-2">
+						<input type="text" class="form-control" id="cli_id" readOnly="readonly"
+							th:field="*{value}"> </input>
 					</div>
 				</div>
 				
+				<div class="row" style="text-align: center; padding-bottom: 40px;">
+					<h3>Produto</h3>
+				</div>
+				
 				<div class="form-group row">
-					<label for="address" class="col-sm-1 col-form-label">Valor</label>
-					<div class="col-sm-11">
-						<input type="text" class="form-control" id="val"
-							th:field="*{value}" placeholder="2,47"> </input>
+					<label for="name" class="col-sm-1 col-form-label">Produto:</label>
+					<div class="col-sm-5">
+						<input type="text" class="form-control" id="prod_add"
+							placeholder="Produto a adicionar"> </input>
+						<input type="hidden" class="form-control" id="prod_add_id"
+							> </input>
 					</div>
+					
+					<div class="col-sm-1">
+						<input type="text" class="form-control" id="prod_medida" placeholder="Kg" readOnly="readonly"
+							> </input>
+					</div>
+					
+					<label for="name" class="col-sm-1 col-form-label">Quantidade:</label>
+					<div class="col-sm-1">
+						<input type="text" class="form-control" id="prod_qnt"
+							> </input>
+					</div>
+					
+					<label for="name" class="col-sm-1 col-form-label">Valor Total:</label>
+					<div class="col-sm-1">
+						<input type="text" class="form-control" id="prod_v_total"
+							> </input>
+					</div>
+					
+					<div class="col-sm-1">
+						<button type="submit" name="add_prod" class="btn btn-primary">Adicionar</button>
+					</div>
+				</div>
+				
+				<div class="row" style="text-align: center; padding-bottom: 40px;">
+					<h3>Lista de Produtos Adicionados</h3>
+				</div>
+				
+				<div class="form-group row" th:each="prod, rowStat : *{products}">
+					<!-- 
+					<label for="phone1" class="col-sm-1 col-form-label">Telefone 
+						</label>
+					 <div class="col-sm-10">
+						<input type="text" class="form-control"
+							th:field="*{phones[__${rowStat.index}__].phone}" placeholder="Telefone"> </input>
+						<input type="hidden" class="form-control" th:field="*{phones[__${rowStat.index}__].id}" 
+						    th:value="*{phones[__${rowStat.index}__].id}"> </input> 
+					</div>
+					<div class="col-sm-1 row-delete-button">
+                           <button type="submit" class="btn btn-default"
+                                   th:value="*{phones[__${rowStat.index}__].id}"
+                                   name="rmContactPhone">
+                               <i class="glyphicon glyphicon-trash icon-white"></i>
+                           </button>
+                        </div>
+                   -->
 				</div>
 				
 				<div class="form-group row">
 					<div class="col-sm-10">
-						<button type="submit" name="newProd" class="btn btn-primary">Gravar</button>
+						<button type="submit" name="newOrder" class="btn btn-primary">Gravar</button>
 					</div>
 				</div>
 
