Creating print page to order.

--- a/src/main/resources/templates/orcamentos.html
+++ b/src/main/resources/templates/orcamentos.html
@@ -47,7 +47,7 @@
 						<td style="text-align: center;">
 							<div class="btn-group">
 								<a class="btn btn-sm btn-primary"
-									th:href="@{/orcamentos/{id}(id=${order.id})}">Imprimir</a>
+									th:href="@{/orcamentos/imprimir/{id}(id=${order.id})}">Imprimir</a>
 							</div>
 						</td>
 						<td style="text-align: center;">
