--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
                     <li class="active"><a th:href="@{/clientes/listar}">Clientes</a></li>
                     <li class="active"><a th:href="@{/produtos/listar}">Produtos</a></li>
                     <li class="active"><a th:href="@{/orcamentos/listar}">Orçamento</a></li>
-                    <li class="active"><a th:href="@{/fluxo}">Fluxo</a></li>
+                    <li class="active"><a th:href="@{/fluxo/consulta}">Fluxo</a></li>
                     <li class="active"><a th:href="@{/usuarios}">Usuários</a></li>
                 </ul>
             </div>
