--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -10,8 +10,7 @@
 
         <footer>
             <span sec:authorize="isAuthenticated()">
-                | Logged user: <span sec:authentication="name"></span> |
-                Roles: <span sec:authentication="principal.authorities"></span> |
+                Olá <span sec:authentication="name"></span>. 
                 <a th:href="@{/logout}">Sair</a>
             </span>
 
