Creating user CRUD.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
                     <li class="active"><a th:href="@{/produtos/listar}">Produtos</a></li>
                     <li class="active"><a th:href="@{/orcamentos/listar}">Orçamento</a></li>
                     <li class="active"><a th:href="@{/fluxo/consulta}">Fluxo</a></li>
-                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="active"><a th:href="@{/usuarios}">Usuários</a></li>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="active"><a th:href="@{/usuarios/listar}">Usuários</a></li>
                 </ul>
             </div>
         </div>
