--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -1,22 +1,60 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>erp-coors</title>
+<title>erp-coors</title>
 
-    <div th:replace="fragments/header :: header-css"/>
+<div th:replace="fragments/header :: header-css" />
 
 </head>
 <body>
-	<div th:replace="fragments/header :: header"/>
-	
+	<div th:replace="fragments/header :: header" />
+
 	<div class="container">
-	
-	    Controle de Usuários
-	
+		<div class="row" style="padding-bottom: 25px;">
+			<div class="col-sm-6">
+				<form>
+					Filtro: <input name="filter" type="text" size="40"></input> <input
+						type="submit" class="btn btn-success" value="Filtrar"></input>
+				</form>
+			</div>
+			<div class="col-sm-5">&nbsp;</div>
+			<div class="col-sm-1">
+				<form action="/usuarios/novo">
+					<input type="submit" class="btn btn-primary" value="Novo">
+					</input>
+				</form>
+			</div>
+		</div>
+		<div class="row">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th style="text-align: center; width: 50px;">ID</th>
+						<th>Nome</th>
+						<th style="text-align: center;">Permissão</th>
+						<th style="text-align: center;">Excluir</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr th:each="user : ${users}">
+						<td th:text="${user.id}" style="text-align: center;"></td>
+						<td th:text="${user.name}"></td>
+						<td style="text-align: center;" th:text="${user.role}"></td>
+						<td style="text-align: center;">
+							<div class="btn-group">
+								<a class="delete btn btn-sm btn-danger"
+									th:href="@{/usuarios/del/{id}(id=${user.id})}">Excluir</a>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
-	<!-- /.container -->
 	
-	<div th:replace="fragments/footer :: footer"/>
+
+	<div th:replace="fragments/footer :: footer" />
 
 </body>
 </html>
