Add custom query on clients

--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="row" style="padding-bottom: 25px;">
 			<div class="col-sm-6">
-				<form>
+				<form action="listar" method="GET">
 					Filtro: <input name="filter" type="text" size="40"></input>
 					<input type="submit" class="btn btn-success" value="Filtrar"></input>
 				</form>
