--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -12,9 +12,9 @@
 	<div class="container">
 		<div class="row" style="padding-bottom: 25px;">
 			<div class="col-sm-6">
-				<form>
-					Filtro: <input name="filter" type="text" size="40"></input> <input
-						type="submit" class="btn btn-success" value="Filtrar"></input>
+				<form action="listar" method="GET">
+					Filtro: <input name="filter" type="text" size="40"></input>
+					<input type="submit" class="btn btn-success" value="Filtrar"></input>
 				</form>
 			</div>
 			<div class="col-sm-5">&nbsp;</div>
