--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -29,7 +29,6 @@
 			<table class="table table-hover">
 				<thead>
 					<tr>
-						<th style="text-align: center; width: 50px;">ID</th>
 						<th>Nome</th>
 						<th style="text-align: center;">Permissão</th>
 						<th style="text-align: center;">Excluir</th>
@@ -38,13 +37,12 @@
 
 				<tbody>
 					<tr th:each="user : ${users}">
-						<td th:text="${user.id}" style="text-align: center;"></td>
-						<td th:text="${user.name}"></td>
+						<td th:text="${user.username}"></td>
 						<td style="text-align: center;" th:text="${user.role}"></td>
 						<td style="text-align: center;">
 							<div class="btn-group">
 								<a class="delete btn btn-sm btn-danger"
-									th:href="@{/usuarios/del/{id}(id=${user.id})}">Excluir</a>
+									th:href="@{/usuarios/del/{id}(id=${user.username})}">Excluir</a>
 							</div>
 						</td>
 					</tr>
