--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,6 +9,9 @@
 		rel="stylesheet"/>
 
         <link rel="stylesheet" th:href="@{/css/main.css}" />
+        
+        <meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     </div>
 </head>
 <body>
