--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" >
 <head>
     <title>erp-coors</title>
+    <meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <div th:replace="fragments/header :: header-css"/>
 
