--- a/src/main/resources/templates/fluxo.html
+++ b/src/main/resources/templates/fluxo.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html 
+	xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+>
 <head>
     <title>erp-coors</title>
 
