--- a/src/main/resources/templates/orcamentos.html
+++ b/src/main/resources/templates/orcamentos.html
@@ -17,8 +17,8 @@
 		<div class="row" style="padding-bottom: 25px;">
 			<div class="col-sm-6">
 				<form>
-					Filtro: <input name="filter" type="text" size="40"></input> <input
-						type="submit" class="btn btn-success" value="Filtrar"></input>
+					Filtro: <input name="filter" type="text" size="40"></input> 
+					        <input type="submit" class="btn btn-success" value="Filtrar"></input>
 				</form>
 			</div>
 			<div class="col-sm-5">&nbsp;</div>
