--- a/src/main/resources/templates/fluxo.html
+++ b/src/main/resources/templates/fluxo.html
@@ -12,14 +12,70 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.14/jquery.datetimepicker.full.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.14/jquery.datetimepicker.min.css"> </link>
 
+	<!-- JS file https://www.jsdelivr.com/package/npm/easy-autocomplete?path=dist  -->
+	<script src="https://cdn.jsdelivr.net/npm/easy-autocomplete@1.3.5/dist/jquery.easy-autocomplete.min.js"></script>
+	
+	<!-- CSS file -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easy-autocomplete@1.3.5/dist/easy-autocomplete.min.css"> </link>
+	
+	<!-- Additional CSS Themes file - not required-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easy-autocomplete@1.3.5/dist/easy-autocomplete.themes.min.css"> </link>
+	
 	<script type="text/javascript">
 	$(document).ready(function(){
 		jQuery.datetimepicker.setLocale('pt-BR');
 	
 		$('#data_end').datetimepicker({format:'d/m/Y'});
 		$('#data_ini').datetimepicker({format:'d/m/Y'});
+		
+		// Sugestions on clients
+		var options_cli = {
+			placeholder: "Nome ou ID do cliente",
+			requestDelay: 500,
+			url: function(phrase) {
+				return "../clientes/filtrar?phrase=" + phrase;
+			},
+			getValue: "name",
+			list: {
+				onSelectItemEvent: function() {
+					var id = $("#filter").getSelectedItemData().id;
+					var name = $("#filter").getSelectedItemData().name;
+
+					$("#filter_id").val(id).trigger("change");
+					$("#filter").val(name).trigger("change");
+				},
+				onLoadEvent: function() {
+					$("#filter").val("").trigger("change");
+					$("#filter_id").val("0").trigger("change");
+				},
+				showAnimation: {
+					type: "fade", //normal|slide|fade
+					time: 400,
+					callback: function() {}
+				},
+				hideAnimation: {
+					type: "slide", //normal|slide|fade
+					time: 400,
+					callback: function() {}
+				}
+			}
+		};
+
+		$("#filter").easyAutocomplete(options_cli);
 	});
 	</script>
+	<style type="text/css">
+		.box-date {
+			    border-color: #ccc;
+			    border-radius: 4px;
+			    border-style: solid;
+			    border-width: 1px;
+			    box-shadow: 0 1px 2px rgba(0,0,0,0.1) inset;
+			    color: #555;
+			    float: none;
+			    padding: 6px 12px;
+		}
+	</style>
 </head>
 <body>
 	<div th:replace="fragments/header :: header"/>
@@ -28,9 +84,16 @@
 	
 		<h2>Selecione o período:</h2>
 		<form th:action="@{/fluxo/ver}">
-			De: <input type="text" id="data_ini" name="data_ini" th:value="${date_ini}?${#dates.format(date_ini, 'dd/MM/yyyy')}:''"> </input>
-			Até <input type="text" id="data_end" name="data_end" th:value="${date_end}?${#dates.format(date_end, 'dd/MM/yyyy')}:''"> </input>
+			<span style="margin-left: 25px;">Cliente: </span> 
+			<input style="margin:5px" id="filter" name="filter" th:value="${filter}" type="text" size="53"></input>
+						<input type="hidden" id="filter_id" name="filter_id" th:value="${filter_id}"></input>
 			
+			<span style="margin-left: 5px;"> De:</span> 
+				<input class="box-date" style="margin:5px;" type="text" id="data_ini" name="data_ini" th:value="${date_ini}?${#dates.format(date_ini, 'dd/MM/yyyy')}:''"> </input>
+			<span> Até </span> 
+				<input class="box-date" style="margin:5px;" type="text" id="data_end" name="data_end" th:value="${date_end}?${#dates.format(date_end, 'dd/MM/yyyy')}:''"> </input>
+			
+			<br />
 			<button type="submit" name="view" value="view" class="btn btn-primary">Buscar</button>
 			<button type="submit" name="print" value="print" class="btn btn-success">imprimir</button>
 		</form>
@@ -61,6 +124,13 @@
 						</td>
 					</tr>
 				</tbody>
+				
+				<tfoot style="font-weight: bold;">
+					<tr>
+						<td class="text-right" colspan="3">Soma total</td>
+						<td class="text-left" th:text="${#numbers.formatDecimal(total, 0, 'COMMA', 2, 'POINT')}"></td>
+					</tr>
+				</tfoot>
 			</table>
 		</div>
 	</div>
